[package]
name = "axum-helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
axum-extra = { version = "0.8", features = ["cookie"] }
tower = "0.4"
tokio = "1.32"
log = "0.4"
http-body = "0.4"
time = "0.3"
async-trait = "0.1"

[dev-dependencies]
axum-test = "12.4"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "*", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.4", features = ["v4"] }
